--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-community/datetimepicker": "^8.5.1",
     "babel-preset-expo": "^54.0.9",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.45.1",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "@typescript-eslint/eslint-plugin": "^8.50.0",
@@ -57,7 +59,10 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-native": "^5.0.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^54.0.16",
     "prettier": "^3.7.4",
+    "ts-node": "^10.9.2",
     "typescript": "~5.9.2"
   },
   "private": true
